--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.23.0",
+    "eslint-config-dnch": "^0.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-tsdoc": "^0.2.11",
     "typescript": "^4.2.3"
+  },
+  "scripts": {
+    "lint": "eslint ."
   }
 }
