--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^7.23.0",
     "eslint-config-dnch": "^0.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "^26.6.3",
@@ -30,5 +31,9 @@
   },
   "bin": {
     "shell-candy": "./bin/shell-candy"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "handlebars": "^4.7.7"
   }
 }
